--- a/beautyandbeast/Base.lproj/Main.storyboard
+++ b/beautyandbeast/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                                 <color key="textColor" red="0.92761206630000004" green="0.80873405929999997" blue="0.43911892180000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="V43-pF-T3F">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="V43-pF-T3F">
                                 <rect key="frame" x="23" y="625" width="311" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
